6682536: java\awt\FullScreen\NonfocusableFrameFullScreenTest\NonfocusableFrameFullScreenTest.java fails

Always-on-top property should be restored on exiting full-screen.

Reviewed-by: tdv